--- a/templates/blogdetail.html
+++ b/templates/blogdetail.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% for post in posts %}
         <div class="row">
             <br>
             <div class="col-md-2 col-sm-3 text-center">
@@ -12,11 +11,10 @@
                 <div class="row">
                     <div class="col-xs-9">
                         <p>{{ post.content|linebreaks }}</p>
-                        <p><button class="btn btn-default" onclick="location.href = {{ post.id }}">Read More</button></p>
+                        <p><button class="btn btn-default">Back to Blog</button></p>
                         <p>{{ post.published_date }}</p>
                     </div>
                 </div>
-                <br><br>
             </div>
         </div>
         <hr>
