--- a/templates/blogdetail.html
+++ b/templates/blogdetail.html
@@ -11,12 +11,11 @@
                 <div class="row">
                     <div class="col-xs-9">
                         <p>{{ post.content|linebreaks }}</p>
-                        <p><button class="btn btn-default">Back to Blog</button></p>
+                        <p><button class="btn btn-default" onclick="location.href='/blog'">Back to Blog</button></p>
                         <p>{{ post.published_date }}</p>
                     </div>
                 </div>
             </div>
         </div>
         <hr>
-    {% endfor %}
 {% endblock content %}
