--- a/templates/blogposts.html
+++ b/templates/blogposts.html
@@ -11,7 +11,7 @@
                 <h3>{{ post.title }}</h3>
                 <div class="row">
                     <div class="col-xs-9">
-                        <p>{{ post.content|linebreaks }}</p>
+                        <p>{{ post.content|truncatewords:30 }}</p>
                         <p><button class="btn btn-default" onclick="location.href = {{ post.id }}">Read More</button></p>
                         <p>{{ post.published_date }}</p>
                     </div>
