--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -12,7 +12,11 @@
                     <div class="col-xs-9">
                         <p>{{ post.content|linebreaks }}</p>
                         <p><button class="btn btn-default" onclick="location.href='/blog'">Back to Blog</button></p>
-                        <p>{{ post.published_date }}</p>
+                        <p>{{ post.published_date }} | Views {{ post.views }}</p>
+
+                        {% load disqus_tags %}
+                        {% set_disqus_title post.title %}
+                        {% disqus_show_comments %}
                     </div>
                 </div>
             </div>
