--- a/templates/blogpostform.html
+++ b/templates/blogpostform.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>New post</h1>
+    {% load bootstrap_tags %}
+    <h1>Add a post</h1>
     <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-btn-info">Save</button>
+        {{ form | as_bootstrap }}
+        <button type="submit" class="btn btn-info">Save</button>
     </form>
 {% endblock %}
