Image upload / edit

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
                     <!--blog entries-->
                 </div>
             </div>
+            <div>
+                <p><button class="btn btn-default" onclick="location.href='/post/new'">Add a Post</button></p>
+            </div>
         </div>
     </div>
 </div>
