--- a/templates/postdetails.html
+++ b/templates/postdetails.html
@@ -15,6 +15,7 @@
                         {% endif %}
                         <p>{{ post.content|linebreaks }}</p>
                         <p><button class="btn btn-default" onclick="location.href='/blog'">Back to Blog</button></p>
+{#                        <p><button class="btn btn-default" onclick="location.href='/post/edit'">Edit</button></p>#}
                         <p>{{ post.published_date }} | Views {{ post.views }}</p>
 
                         {% load disqus_tags %}
