--- a/templates/postdetails.html
+++ b/templates/postdetails.html
@@ -14,7 +14,7 @@
                             <img src="/media/{{ post.image }}">
                         {% endif %}
                         <p>{{ post.content|linebreaks }}</p>
-                        <p><button class="btn btn-default" onclick="location.href='/blog'">Back to Blog</button></p>
+                        <p><button class="btn btn-default" onclick="location.href='/'">Back to Blog</button></p>
 {#                        <p><button class="btn btn-default" onclick="location.href='/post/edit'">Edit</button></p>#}
                         <p>{{ post.published_date }} | Views {{ post.views }}</p>
 
